--- a/ExpediaHotelRecommendation.ipynb
+++ b/ExpediaHotelRecommendation.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Expedia provided logs of customer behavior.\n",
+    "Expedia provided logs of customer behavior (https://www.kaggle.com/c/expedia-hotel-recommendations)\n",
     "\n",
     "The goal of the analysis is to predict the booking outcome (hotel cluster) for a user event\n",
     "\n",
